@@ -4,4 +4,4 @@ description = A node that can be used to examine equipment & item specs.
 author = Jordan Irwin (AntumDeluge)
 version = 1.2
 license = MIT
-optional_depends = basic_materials
+optional_depends = basic_materials, wlight, wielded_light
