@@ -6,6 +6,8 @@ v1.3
 - item type(s) are displayed as a list
 - parses node specs
 - parses entity specs
+- supports many more attributes
+- added wlight & wielded_light support
 
 v1.2
 ----
